Added test script step

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,15 @@
 name: My First Pipeline
 on: [push]
+
 jobs:
   test-job:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
       - name: Run a greeting
         run: echo "Hello! The pipeline is running successfully!"
+
+      - name: Run a test script
+        run: echo "Testing the application steps..."
